--- a/html/learn6.html
+++ b/html/learn6.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LEARN-6</title>
 </head>
+
 <body>
-    
+    <p>我们来看看如何在HTML中嵌入别的HTML</p>
+    <p>以AppleMusic为例，嵌入杰伦的《反方向的钟》</p>
+    <iframe allow="autoplay *; encrypted-media *; fullscreen *" frameborder="0" height="150"
+        style="width:100%;max-width:660px;overflow:hidden;background:transparent;"
+        sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-storage-access-by-user-activation allow-top-navigation-by-user-activation"
+        src="https://embed.music.apple.com/cn/album/%E5%8F%8D%E6%96%B9%E5%90%91%E7%9A%84%E9%90%98/535790918?i=535791118&l=en">
+    </iframe>
+    <p>此外，object和embed都可以嵌入文档，它们更多被用来嵌入其他类型的资源，比如PDF，插件之类的。</p>
+    <p>具体看<a href="https://developer.mozilla.org/zh-CN/docs/Learn/HTML/Multimedia_and_embedding/Other_embedding_technologies#%3Cembed%3E和%3Cobject%3E元素">这里</a></p>
 </body>
+
 </html>
