--- a/css/learn2.html
+++ b/css/learn2.html
@@ -12,5 +12,6 @@
     <p>CSS也可以应用函数进行处理，比如实时获取浏览器页面宽度的函数</p>
     <p>此外，CSS也可以使用@rule进行指定规则，最常见的之一就是@media来进行媒介查询</p>
     <p id="id1">我是一个媒介查询，我只有在浏览器宽度大于800px时才会变粉</p>
+    <p>此外，还有一些速记属性，就是说有些CSS属性有好多个值，我们可以不一一指出，而是通过默认顺序去书写</p>
 </body>
 </html>
