--- a/css/learn7.html
+++ b/css/learn7.html
@@ -10,5 +10,13 @@
 <body>
     <p>现在来看看怎么更改元素的背景和边框吧！</p>
     <p id="id1">首先是背景颜色</p>
+    <p>其实在这里我们可以看到，除了内容区，背景颜色还会填充内边距。</p>
+    <p>现在来看看背景图片的设置，除了简单的设置背景图，还可以设置背景图片的左右重复，上下重复，大小，覆盖方式，以及起始位置</p>
+    <div id="id2"></div>
+    <p>现在我们来看看边框的设置，边框有三个属性，分别是宽度width，样式style还有颜色color</p>
+    <p>就像我们之前说的那样，除了直接使用border-width/style/color之外，还可以穿插top/bottom/left/right来进行精确控制</p>
+    <p>此外还可以使用缩略写法，即传三个参数，空格分割，默认顺序：width style color</p>
+    <p>最后还可以通过radius来实现圆角效果。</p>
+    <p id="id3">我是文本</p>
 </body>
 </html>
