--- a/css/learn6.html
+++ b/css/learn6.html
@@ -11,7 +11,7 @@
     <p>现在来学习CSS的盒模型，简而言之，就是任何一个元素都处于一个盒子中，我们平时
         可见的文本存放在content区域中；
         <br>
-        这个区域外边还有一个被称为内边距(padding)的区域，内边距的外边
+        这个区域外边还有一个被称为内边距(又翻译为填充)(padding)的区域，内边距的外边
         有一个称为边框(border)的区域，边框外面有一个称为外边距(margin)的区域；
         <br>
         content区域是一个长方形，
