--- a/css/learn9.html
+++ b/css/learn9.html
@@ -15,6 +15,7 @@
         <br>
         比如em如果用在font-size中，则是<b>相对于父元素的字体大小</b>，如果用在别的位置，则是<b>相对于自己的font-size大小</b>；加个r，即rem则是相对于根元素的。
         <br>
+        还有两个叫做vw, vh的单位，代表窗口大小的1%，vw是窗口宽度的1%，vh是窗口高度的1%。
         其他单位看<a href="https://developer.mozilla.org/zh-CN/docs/Learn/CSS/Building_blocks/Values_and_units#数字，长度和百分比">这里</a>。
     </p>
     <p>现在我们来看一个实验，首先是使用em的：</p>
