--- a/js/learn1.html
+++ b/js/learn1.html
@@ -22,6 +22,8 @@
         <p id="lastResult"></p>
         <p id="tips"></p>
     </div>
+    <br>
+    <p>因为我比较熟悉其他语言(Go, Java, Rust开发者属于是了)，所以JS基础语法就不说了，很多都能找到一样的使用方式，下面重点说说JS独有的一些特性和使用。</p>
 </body>
 
 </html>
