--- a/js/learn4.html
+++ b/js/learn4.html
@@ -16,6 +16,9 @@
     <p>setInterval()接收两个参数，第一个是需要定期执行的函数，第二个是时间间隔，单位(毫秒)</p>
     <p>二者都有对应的清除方法：clearTimeout()/clearInterval()；入参是对应set()函数的返回值，可以理解成句柄</p>
     <p>现在我们以一个定时器为例子来看看怎么使用它们：</p>
+    <div>
+        <p id="current-time"></p>
+    </div>
     <div id="div1">
         <div>
             <input type="button" value="开始" id="start">
@@ -37,7 +40,6 @@
     <div id="div2">
         <p id="output"></p>
     </div>
-    <p id="id1"></p>
 </body>
 
 </html>
