--- a/js/learn2.html
+++ b/js/learn2.html
@@ -6,33 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LEARN-2</title>
-    <link rel="stylesheet" href="./learn2.css">
-    <script async src="./learn2.js"></script>
 </head>
 
 <body>
-    <p>现在我们进入JS基本教学。作为一个约定，如果是我已经知道的知识，或者我了解的用法，我会直接略过。</p>
-    <p>本学习笔记仅记录那些我不了解的和JS独有的特性。</p>
-    <p>现在我们来看看创建JavaScript对象的方法，MDN提到了四种方式：</p>
+    <p>现在来看看JS对于事件的处理。</p>
+    <p>怎么理解事件呢？比方说鼠标点击，键盘按下弹起，鼠标悬浮，聚焦到某个元素，都属于事件。
+        事件是一种现实的，由使用者手动触发的一种行为。
+    </p>
+    <p>JS有三种对于事件触发绑定事件处理函数的方式：</p>
     <ul>
         <li>
-            直接定以创建法：
-            <p id="id1"></p>
+            行内事件处理器(不推荐)，即直接在HTML元素的事件属性后面设置处理函数。
+            <br>
+            因为此种方式会导致JS代码和HTML混合在一起，不利于阅读和调试，以及初始加载。
         </li>
         <li>
-            函数创建法：
-            <p id=id2></p>
+            事件处理器属性，即在JS里获取元素对象，通过对象的事件字段传递事件处理函数。
         </li>
         <li>
-            构造器创建法(需要定义类)：
-            <p id="id3"></p>
-        </li>
-        <li>
-            对象克隆法：
-            <p id="id4"></p>
+            DOM L2事件，即通过addEventListener()/removeEventListener()在JS中对元素对象动态添加指定事件的事件处理函数；
+            <br>
+            这有一个好处就是，可以对同一个事件添加多个事件处理函数。另一个则是可以动态移除我们不感兴趣的事件处理函数。
         </li>
     </ul>
-    <p>具体实现细节请看JS文件源码。</p>
+    <p>
+        事件处理函数可以接受一个事件对象作为参数，通过事件对象，我们可以获得和这个事件相关的一些值，比如事件属于哪个元素，事件类型等。
+    </p>
+    <p>
+        借由事件对象，我们可以通过其preventDefault()方法阻止事件的默认行为，比方说阻止表单的默认提交。
+    </p>
+    <p>现在我们来谈谈事件传递性，现代浏览器有两种事件传递方式：捕获事件和冒泡事件。</p>
+    <p>捕获事件会导致事件处理函数的触发由最外层元素开始(如果有处理函数的话)，直到当前元素。</p>
+    <p>冒泡事件会导致事件处理函数的触发由当前元素开始，直到最外层(如果有事件处理函数的话)。</p>
+    <p>当前浏览器默认是冒泡事件，所以我们可以通过在父元素设置事件处理函数来处理多个子元素的事件，而子元素忽略此事件即可。</p>
 </body>
 
 </html>
